# astr0

./: .gitignore  CLAUDE.md  Makefile  Pipfile  README.md  ROADMAP.md  pyproject.toml  run_tests.py
dev/: CHEATSHEET.md
docs/: api.md  constants.md  ecosystem-analysis.md  getting-started.md  index.md
scripts/: build_catalog_db.py
src/astr0/: __init__.py
src/astr0/cli/: __init__.py  time_cmd.py
src/astr0/core/: constants.py  moon.py  observer.py  sun.py  visibility.py
src/starward/cli/: __init__.py  caldwell_cmd.py  ic_cmd.py  list_cmd.py  messier_cmd.py  ngc_cmd.py  stars_cmd.py
src/starward/core/: caldwell.py  caldwell_types.py  catalog_db.py  finder.py  hipparcos.py  hipparcos_types.py  ic.py  ic_types.py  lists.py  messier.py  messier_data.py  ngc.py  ngc_types.py
src/starward/data/: __init__.py  catalogs.db
src/starward/output/: console.py
tests/: conftest.py  test_angles.py  test_cli.py  test_constants.py  test_coords.py  test_time.py  test_v02.py
tests/allure/: __init__.py  categories.json  helpers.py
tests/cli/: test_commands.py
tests/core/: test_angles.py  test_caldwell.py  test_constants.py  test_coords.py  test_hipparcos.py  test_ic.py  test_lists.py  test_messier.py  test_moon.py  test_ngc.py  test_observer.py  test_time.py  test_visibility.py
tests/integration/: __init__.py  test_workflows.py
tests/output/: test_formatters.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/src/css/: custom.scss
website/src/css/components/: _footer.scss  _navbar.scss  _sidebar.scss
website/src/css/pages/: _landing.scss
website/src/css/utilities/: _text.scss
